--- a/front-end/feedbacks.css
+++ b/front-end/feedbacks.css
@@ -22,6 +22,20 @@
   background-color: #f4d160;
   color: white;
 }
+
+.container {
+  border: 5px solid #28527a;
+  display: flex; /* le face de la stg la drp*/
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  width: 50%;
+  flex-basis: 50%;
+}
+.container > post {
+  align-items: center;
+}
+
 footer {
   background-color: #28527a;
   color: white;
