--- a/front-end/home.css
+++ b/front-end/home.css
@@ -2,28 +2,35 @@ body{
     background-color: #fbeeac;
     margin:0;
 }
-header{
-    background-color: #28527a;
+.topnav {
     overflow: hidden;
-    
-}
-header a{
-    float:left;
-    color:white;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-    padding: 14px 16px;
-    
-}
-header a:hover {
-      background-color: #8ac4d0;
-      color: black;
-}
-header a.active {
-      background-color: #f4d160;
-      color: white;
-}
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #28527a;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
 .userbox{
     vertical-align: middle;
   width: 48px;
@@ -242,45 +249,36 @@ select,option,button{
 
 footer{
     background-color: #28527a;
-    color:white;
-    position:static;
-    left:0;
-    bottom: 0;
-    width: 100%;
+    display: flex;
+    padding-bottom: 1em;
+    color: whitesmoke;
+    border-top: 1px solid #0ca819;
+    
+   
+}
+footer>section{
+    flex:1;
     text-align: center;
 }
 
-@media only screen and (max-width: 720px)
-{
-    body
-    {
-        background-size:auto ;
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
     }
-
-    .titlu_proiect
-    {
-        font-size: 3vw;
-        display:flex;
-        justify-content: flex-end ;
-        flex-wrap: wrap ;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
     }
-
-    .form_login button, .form_register button
-    {
-        padding: 3%;
-        font-size: 125%;
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
     }
-
-    .login_register
-    {
-        width: 90%;
-    }
-
-    #switch_link_to_login, 
-    #text_switch_register,
-    #switch_link_to_register,
-    #text_switch_login
-    {
-        font-size: 3vw;
-    }
-}
+  }
