--- a/front-end/home.css
+++ b/front-end/home.css
@@ -1,16 +1,39 @@
-body{
-    background-color: #fbeeac;
-    margin:0;
+html 
+{
+    height: 100%;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
 }
+
+html::-webkit-scrollbar 
+{
+    display: none;
+}
+
+body
+{
+   /* background-color: #fbeeac; */
+    margin:0;
+    padding:0;
+    background-size: auto;
+    background-attachment: fixed;
+    background-image: linear-gradient(to left bottom, #393e46, #3f505f, #3e6478, 
+                                                      #37798f, #288fa2, #288fa2, 
+                                                      #288fa2, #288fa2, #37798f, 
+                                                      #3e6478, #3f505f, #393e46
+                                    );
+
+}
+
+/* bara navigare */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #252a34;
   }
-  
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #eaeaea;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -18,81 +41,100 @@ body{
   }
   
   .topnav a:hover {
-    background-color: #ddd;
+    background-color: #eaeaea;
     color: black;
   }
   
   .topnav a.active {
-    background-color: #28527a;
+    background-color: #08d9d6;
     color: white;
   }
   
   .topnav .icon {
     display: none;
   }
-  
+  /* cutie username + meniu JS SOON */
 .userbox{
     vertical-align: middle;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
     float:left;	
     text-decoration: none;
 }
 .Username{
-    float:right;
+    position: absolute;
+    right:0;
+    top:0;
+     background-color: #00adb5; /*culoare casuta */
+}
+/* aliniere text + meniul? */
+.Username label{
+    float: left;
+    display: block;
+    color: white;
     text-align: center;
-    font-size: 17px;
+    padding: 14px 16px;
     text-decoration: none;
-    color:white;
+    font-size: 17px;
+    cursor: pointer;
     background-color: #00adb5;
-    padding-right: 10px;
-    align-items: center;
-}
-.titlu_proiect
-{
-color: #CC0050;
-display:flex;
-justify-content:center;
-flex-wrap: wrap ;
-font-size: 150%;
-animation: titlu__proiect .75s  infinite alternate;
-}
 
+}
+/* un titlu basic */
 .titlu_proiect h1
 {
-padding:1%;
+    padding:1%;
+}
+.titlu_proiect
+{    
+    color: #CC0050;
+    display:flex;
+    justify-content:center;
+    flex-wrap: wrap ;
+    font-size: 150%;
+    animation: titlu__proiect .75s  infinite alternate;
+}
+/* animatie .titlu_proiect */
+
+@keyframes titlu__proiect 
+{
+    from 
+    {
+    text-shadow:
+        0 0 10px #00adb5,
+        0 0 20px #393e46,
+        0 0 30px #222831;
+    }
+    to 
+    {
+    text-shadow:
+        0 0 10px #222831,
+        0 0 20px #393e46,
+        0 0 30px #00adb5,;
+    }
 }
 
-@keyframes titlu__proiect {
-from {
-text-shadow:
-0 0 10px #00adb5,
-0 0 20px #393e46,
-0 0 30px #222831;
+/* centrul paginii  */
+.center-page
+{
+    margin:auto;
+    margin-top:25px;
+    margin-bottom: 25px;
+    width: 80%;
+    border: 1% solid #28527a;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px #222831;
+    padding: 2%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
 }
-to {
-text-shadow:
-0 0 10px #222831,
-0 0 20px #393e46,
-0 0 30px #00adb5,;
-}
-}
-.center-page{
-     margin:auto;
-     margin-top:25px;
-     margin-bottom: 25px;
-      width: 50%;
-      border: 4px solid #28527a;
-     border-radius: 6px;
-      padding: 20px;
-     display:flex;
-     flex-direction: column;
-     justify-content: center;
-}
+ /* casuta postare  */
 .postare{
     
-    background-color:#f4d160 ;
+    background-image: linear-gradient(to right bottom, #252a34, #363756, #5b3e72, #8d3e81, #c2357f, #c2357f, #c2357f, #c2357f, #8d3e81, #5b3e72, #363756, #252a34);
     box-sizing: border-box;  
     width: 100%;
     height: 100%;
@@ -100,91 +142,123 @@ text-shadow:
     /* margin: 20px; */
     margin-top:20px;
     margin-bottom: 20px;
-    border: 4px solid #28527a;
-    border-radius: 6px;
+    border: 1% solid #28527a;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px #222831;
     text-align: center;   
     
 }
 #text-postare{
     background-color: whitesmoke;
-    border: 3px solid #28527a;
+    border: 3px solid #222831 ;
     width:95%;
     height: 150px;
-    /* margin:10px; */
+    margin:1%;
     resize:none;
-    
-    /* border-left: 10px; */
 }
 .postare-element_footer{
     position: inherit;
     padding:5px;
-    border-top:3px solid #28527a;
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: center;
-
-/* background-color: blueviolet; */
 }
 select,option,button{
- 
-    text-align: center;
-    align-self: center;
-    background-color:#8ac4d0;
+
+    background-image: linear-gradient(to right top, #ff2e63, #fe5b90, #f67fb5, #ea9ecf, #e0bade);
     color:black;
     text-transform: uppercase;
     outline: 0;
-    width: auto;
-    padding:2%;
-    /* margin-left:10px; */
+    width: 120px;
+    height: 48px;
+    padding:0%;
     cursor: pointer;
     transition:all 0.2s;
     border:none;
 }
+.postare button{
+    margin:1%;
+}
+.postare select{
+    height: 30px;
+}
+/* lista postarile si elemente reply comments  */
 .postari-list{
-    background-color:#f4d160 ;
+    background-color:none ;
     box-sizing: border-box;  
     width: 100%;
     height: 100%;
     padding: 2%; 
-    border: 4px solid #28527a;
-    border-radius: 6px;
+    border: 1% solid #28527a;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px #222831;
     text-align: center;
+    
 }
+
 .postari-list-element{
-    background-color:#f4d160 ;
+   
+    /* background-image: radial-gradient(circle, #08d9d6, #02d1d0, #00c8ca, #00c0c4, #00b8be, #00b8be, #00b8be, #00b8be, #00c0c4, #00c8ca, #02d1d0, #08d9d6); */
+    background-image: linear-gradient(to right top, #08d9d6, #00baf0, #4c90ea, #9e5bb5, #b1215f);
     box-sizing: border-box;  
     width: 100%;
     height: 100%;
     padding: 0px; 
-    margin-top: 20px; 
-    border: 4px solid #28527a;
-    border-radius: 6px;
+    margin-bottom:2%; 
+    margin-top: 2%;
+    border: 1% solid #28527a;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px #222831;
     text-align: center;
     border-collapse: separate;
-    border-spacing: 20px;
-    position: relative;
+    border-spacing: 3%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 .postari-list-element_header{
-    border-bottom: 3px solid #28527a;
-    padding:5px;
+    border: 1% solid #28527a;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px #222831;
+    border-radius:6px;
+    padding :1%;
+    margin: 1%;
+    margin-bottom: 2%;
+    background-image: linear-gradient(to right bottom,  #f4d160, #ced969, #a7dd7c, 
+                                                        #7edf97, #53deb3, #53deb3, 
+                                                        #53deb3, #53deb3, #7edf97, 
+                                                        #a7dd7c, #ced969, #f4d160);
+    
 
 }
 .postari-list-element_footer{
     position: inherit;
     padding:5px;
-    border-top:3px solid #28527a;
+    border-top:1px solid black;
     display: flex;
     justify-content: center;
     flex-direction: row;
-    justify-content: space-around;
-    align-self: center;
+    justify-content: space-evenly;
 /* background-color: blueviolet; */
 }
 
-.add-comment{
-    border:2px solid blueviolet;
-    height: 100%;
+.postari-list-element_footer button
+{
+    background-color:#28527a;
+    background-image: linear-gradient(to right top, #252a34, #413a61, #7c3f7e, #c2357f, #ff2e63);
+    border-radius: 3px;
+    color:white;
+}
+
+
+.add-comment
+{  
+    margin-top: 1%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+
 }
 .add-comment #casuta-comment{
     background-color: whitesmoke;
@@ -195,60 +269,96 @@ select,option,button{
     /* margin:10px; */
     resize:none;
 }
-.replies{
+/* raspunsuri  */
+.replies
+{
+    margin-top: 1%;
     padding:0px;
     box-sizing: border-box;
-    border-top: 2px solid green ;
     /* padding:5px; */
-    background-color: mistyrose;
+    background-color:none;
     display:flex;
     justify-content: space-between;
     flex-direction: column;
 }
-.buton-raspuns{
-    background-color: olivedrab;
-    display:flex;
-    justify-content: left;
-    padding:0px;
+.replies button 
+{
+    color:white;
+}
+.replies .buton-raspuns
+{
+    background-image: linear-gradient(to right top, #252a34, #413a61, #7c3f7e, #c2357f, #ff2e63);
+    width: 100%;
+    height: 40px;
+}
+.add-comment button
+{
+    background-image: linear-gradient(to right top, #252a34, #413a61, #7c3f7e, #c2357f, #ff2e63);
+    border-radius: 3%;
+    color:white;
+    
 }
 .reply_form{
     box-sizing: border-box;
-    border :4px solid mediumorchid;
+    border: 1% solid #28527a;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px #222831;
     border-radius:6px;
-    padding :2px;
-    margin-top: 2%;
-    
-
+    padding :1%;
+    margin: 1%;
+    margin-bottom: 2%;
+    background-image: linear-gradient(to right bottom, #f4d160, #ced969, #a7dd7c, #7edf97, #53deb3, #53deb3, #53deb3, #53deb3, #7edf97, #a7dd7c, #ced969, #f4d160);
 }
-.reply_form:first-of-type{
-    margin-top: 10px;
-  }
+
+
 .reply_form:last-of-type{
-    background-color: palegoldenrod;
+    background-color: none;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
 }
 
+.reply_form p{
+    padding: 2%;
+}
 .reply_header{
-    box-sizing: border-box;
-    border-bottom: 2px solid green;
+    border: 1% solid #28527a;
+    border-radius: 5px;
+    box-shadow: 5px 3px 5px 3px #222831;
+    border-radius:6px;
+    padding :1%;
+    margin: 1%;
+    margin-bottom: 2%;
+    background-image:linear-gradient(to right top, #252a34, #413a61, #7c3f7e, #c2357f, #ff2e63);
 
 }
 .reply_footer{
+    margin:1%;
     box-sizing: border-box;
-    border-top: 2px solid green;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* border-top:1px solid black; */
 }
+.reply_footer button,
+.reply_header button
+{
+    background-color: #ff2e63;
+    background-image: linear-gradient(to right top, #252a34, #413a61, #7c3f7e, #c2357f, #ff2e63);
+}
+
 .status{
     
-    background-color: green;
+    background-image: linear-gradient(to top, #00a974, #009f5d, #009545, #008b2a, #008000);    width: 120px;
     color:white;
     align-self: center;
     text-align: center;
-    padding: 5px;
+    border: 2px;
+    padding:15px 17px;
+    
 }
 
 footer{
-    background-color: #28527a;
+    background-color: #252a34;
     display: flex;
     padding-bottom: 1em;
     color: whitesmoke;
@@ -261,19 +371,22 @@ footer>section{
     text-align: center;
 }
 
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+@media screen and (max-width: 720px) {
+    /* .topnav a:not(:first-child) {display: none;} */
+    .topnav a {display: none;}
+    .topnav a:first-child{
+        margin-top:48px;
+    }
+    
     .topnav a.icon {
-      float: right;
+      float: left;
       display: block;
     }
-  }
-  
-  @media screen and (max-width: 600px) {
+
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
       position: absolute;
-      right: 0;
+      left: 0;
       top: 0;
     }
     .topnav.responsive a {
@@ -281,4 +394,39 @@ footer>section{
       display: block;
       text-align: left;
     }
+    .topnav.responsive .Username {
+        float: none;
+        display: block;
+        text-align: left;
+        margin-right:0px;
+      }
+    .center-page
+    {
+        width: 90%;
+    }
+
+    .postare-element_footer  
+    {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin:1%;
+    }
+
+    .postare-element_footer aside
+    {
+        display:flex;
+        flex-direction:  row;
+        align-self: center;
+        justify-content: space-between;
+        margin: 3%;
+        width: 75%;
+    }
+
+    .postare button 
+    {
+        margin:3%;
+        
+    }
+
   }
