--- a/front-end/feedbacks.css
+++ b/front-end/feedbacks.css
@@ -1,72 +1,219 @@
-body {
-  background-color: #fbeeac;
-  margin: 0;
+html 
+{
+  height: 100%;
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar 
+{
+  display: none;
+}
+
+
+body 
+{
+  margin:0;
+  padding:0;
+  background-size: auto;
+  background-attachment: fixed;
+  background-image: linear-gradient(to left bottom, #393e46, #3f505f, #3e6478, 
+                                                    #37798f, #288fa2, #288fa2, 
+                                                    #288fa2, #288fa2, #37798f, 
+                                                    #3e6478, #3f505f, #393e46);
+
 }
 
 .topnav {
-  background-color: #28527a;
   overflow: hidden;
+  background-color: #252a34;
 }
-
 .topnav a {
   float: left;
-  color: white;
+  display: block;
+  color: #eaeaea;
   text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  padding: 14px 16px;
 }
 
 .topnav a:hover {
-  background-color: #8ac4d0;
+  background-color: #eaeaea;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #f4d160;
+  background-color: #08d9d6;
   color: white;
 }
 
-.container {
-  margin: auto;
-  width: 50%;
-  border: 4px solid #28527a;
-  border-radius: 6px;
-  padding: 20px;
-  display: flex;
+.topnav .icon {
+  display: none;
+}
+/* cutie username + meniu JS SOON */
+.userbox{
+  vertical-align: middle;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  float:left;	
+  text-decoration: none;
+  border:none;
+  cursor:pointer;
+  outline: 0;
+}
+.Username{
+  position: absolute;
+  right:0;
+  top:0;
+   background-color: #00adb5; /*culoare casuta */
+}
+/* aliniere text + meniul? */
+.Username label{
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  cursor: pointer;
+  background-color: #00adb5;
+
+}
+
+
+.container 
+{
+  margin:auto;
+  margin-top:2%;
+  width: 75%;
+  border: 1% solid #28527a;
+  border-radius: 5px;
+  box-shadow: 5px 3px 5px 3px #222831;
+  padding: 2%;
+  display:flex;
   flex-direction: column;
   justify-content: center;
+  justify-items: center;
 }
 .post {
-  background-color: #f4d160;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  padding: 0px;
-  margin-top: 20px;
-  border: 4px solid #28527a;
-  border-radius: 6px;
-  text-align: center;
-  border-collapse: separate;
-  border-spacing: 20px;
-  position: relative;
+  box-sizing: border-box;  
+
+  text-align: center; 
+  border: 1% solid #28527a;
+  border-radius: 5px;
+  box-shadow: 5px 3px 5px 3px #222831;
+  border-radius:6px;
+  padding :1%;
+  margin: 1%;
+  margin-bottom: 2%;
+  background-image: linear-gradient(to right bottom,  #252a34, #363756, #5b3e72, 
+                                                      #8d3e81, #c2357f, #c2357f, 
+                                                      #c2357f, #c2357f, #8d3e81, 
+                                                      #5b3e72, #363756, #252a34);
+  
 }
 .post-user {
-  border-bottom: 3px solid #28527a;
-  padding: 5px;
+  
+  border: 1% solid #28527a;
+  border-radius: 5px;
+  box-shadow: 5px 3px 5px 3px #222831;
+  border-radius:6px;
+  padding :1%;
+  margin: 1%;
+  margin-bottom: 2%;
+  background-image: linear-gradient(to right bottom,  #f4d160, #ced969, #a7dd7c, 
+                                                      #7edf97, #53deb3, #53deb3, 
+                                                      #53deb3, #53deb3, #7edf97, 
+                                                      #a7dd7c, #ced969, #f4d160);
+  
 }
 .post-footer {
   position: inherit;
   padding: 5px;
-  border-top: 3px solid #28527a;
 }
 
-footer {
-  background-color: #28527a;
-  color: white;
-  position: static;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+.post-footer button
+{
+  text-align: center;
+  align-self: center;
+  color:black;
+  text-transform: uppercase;
+  font-family: cursive;
+  width: auto;
+  padding:1%;
+  font-size:100%;
+  cursor: pointer;
+  transition:all 0.2s;
+  border: 1% outset #28527a;
+  border-radius: 5px;
+  box-shadow: 5px 3px 5px 3px #222831;
+  background-image: linear-gradient(to right bottom,  #f4d160, #ced969, #a7dd7c, 
+                                                      #7edf97, #53deb3, #53deb3, 
+                                                      #53deb3, #53deb3, #7edf97, 
+                                                      #a7dd7c, #ced969, #f4d160);
+  
+}
+
+.post-footer button:hover
+{
+    background: #7d00b8;
+    color: #fff;
+    border-radius: 3%;
+    box-shadow:    0 0 5px #7d00b8,
+                   0 0 25px #7d00b8,
+                   0 0 50px #7d00b8,
+                   0 0 100px #7d00b8;
+}
+
+footer{
+  background-color: #252a34;
+  display: flex;
+  padding-bottom: 1em;
+  color: whitesmoke;
+  border-top: 1px solid #0ca819;
+  
+ 
+}
+footer>section{
+  flex:1;
   text-align: center;
 }
+
+
+@media screen and (max-width: 720px) {
+  .container
+  {
+    border:none;
+  }
+  /* .topnav a:not(:first-child) {display: none;} */
+  .topnav a {display: none;}
+  .topnav a:first-child{
+      margin-top:48px;
+  }
+  
+  .topnav a.icon {
+    float: left;
+    display: block;
+  }
+
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .Username {
+      float: none;
+      display: block;
+      text-align: left;
+      margin-right:0px;
+    }
+  }
