--- a/proba_final/home.css
+++ b/proba_final/home.css
@@ -54,12 +54,18 @@ body
     display: none;
   }
   /* cutie username + meniu JS SOON */
-
+.userbox{
+    vertical-align: middle;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    float:left;	
+    text-decoration: none;
+}
 .Username{
     position: absolute;
     right:0;
     top:0;
-    display: inline-block;
      background-color: #00adb5; /*culoare casuta */
 }
 /* aliniere text + meniul? */
@@ -73,42 +79,8 @@ body
     font-size: 17px;
     cursor: pointer;
     background-color: #00adb5;
-}
-.userbox{
-    
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    float:left;	
-    text-decoration: none;
-}
 
-  .dropdown-content {
-    display: none;
-    right: 0;
-    top:0;
-    margin-top: 48px;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #f1f1f1;}
-  
-  .Username:hover .dropdown-content {
-    display: block;
-  }
-  
-  .Username:hover .userbox {
-    background-color: #3e8e41;
-  }
+}
 /* un titlu basic */
 .titlu_proiect h1
 {
@@ -159,40 +131,6 @@ body
     justify-content: center;
     justify-items: center;
 }
-/* searchbar */
-form.example input[type=text] {
-    display:flex;
-    flex-direction: row;
-    padding: 10px;
-    font-size: 17px;
-    border: 1px solid grey;
-    float: left;
-    width: 80%;
-    background: #f1f1f1;
-  }
-  
-  form.example button {
-    float: right;
-    width: 20%;
-    padding: 10px;
-    background: #2196F3;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    border-left: none;
-    cursor: pointer;
-  }
-  
-  form.example button:hover {
-    background: #0b7dda;
-  }
-  
-  form.example::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
  /* casuta postare  */
 .postare{
     
@@ -347,7 +285,7 @@ select,option,button{
 {
     color:white;
 }
-.replies .buton-raspuns
+.replies #buton-raspuns
 {
     background-image: linear-gradient(to right top, #252a34, #413a61, #7c3f7e, #c2357f, #ff2e63);
     width: 100%;
@@ -424,7 +362,6 @@ footer{
     display: flex;
     padding-bottom: 1em;
     color: whitesmoke;
-    border-top: 1px solid #0ca819;
     
    
 }
@@ -432,6 +369,13 @@ footer>section{
     flex:1;
     text-align: center;
 }
+
+/*
+.reply_form
+{
+    display:none;
+}
+*/
 
 @media screen and (max-width: 720px) {
     /* .topnav a:not(:first-child) {display: none;} */
