--- a/proba_final/feedbacks.css
+++ b/proba_final/feedbacks.css
@@ -52,21 +52,12 @@ body
   display: none;
 }
 /* cutie username + meniu JS SOON */
-.userbox{
-  vertical-align: middle;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  float:left;	
-  text-decoration: none;
-  border:none;
-  cursor:pointer;
-  outline: 0;
-}
+
 .Username{
   position: absolute;
   right:0;
   top:0;
+  display: inline-block;
    background-color: #00adb5; /*culoare casuta */
 }
 /* aliniere text + meniul? */
@@ -80,10 +71,39 @@ body
   font-size: 17px;
   cursor: pointer;
   background-color: #00adb5;
-
+}
+.userbox{
+  
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  float:left;	
+  text-decoration: none;
 }
 
+.dropdown-content {
+  display: none;
+  right: 0;
+  top:0;
+  margin-top: 48px;
+  background-color: #00adb5;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
 
+.dropdown-content a:hover {background-color: white;}
+
+.Username:hover .dropdown-content {
+  display: flex;
+  flex-direction: column;
+}
 .container 
 {
   margin:auto;
@@ -188,32 +208,81 @@ footer>section{
   {
     border:none;
   }
-  /* .topnav a:not(:first-child) {display: none;} */
-  .topnav a {display: none;}
-  .topnav a:first-child{
-      margin-top:48px;
-  }
-  
-  .topnav a.icon {
-    float: left;
-    display: block;
-  }
+   /* .topnav a:not(:first-child) {display: none;} */
 
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .Username {
-      float: none;
-      display: block;
-      text-align: left;
-      margin-right:0px;
+   .topnav a {display: none;}
+   .topnav a:first-child{
+       margin-top:48px;
+   }
+   
+   .topnav a.icon {
+     float: left;
+     display: block;
+   }
+
+   .topnav.responsive {position: relative;}
+   .topnav.responsive .icon {
+     position: absolute;
+     left: 0;
+     top: 0;
+   }
+   .topnav.responsive a {
+     float: none;
+     display: block;
+     text-align: left;
+   }
+   .topnav.responsive .Username {
+       float: none;
+       display: block;
+       text-align: left;
+       margin-right:0px;
+     }
+
+   /* aliniere text + meniul? */
+   .Username label{
+       float: left;
+       display: block;
+       color: white;
+       text-align: center;
+       padding: 14px 16px;
+       text-decoration: none;
+       font-size: 17px;
+       cursor: pointer;
+       background-color: #00adb5;
+   }
+   .userbox{
+       
+       width: 48px;
+       height: 48px;
+       border-radius: 50%;
+       float:left;	
+       text-decoration: none;
+   }
+   
+     .dropdown-content {
+       display: none;
+       right: 0;
+       top:0;
+       margin-top: 48px;
+       background-color: #00adb5;
+       min-width: 160px;
+       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+       z-index: 1;
+     }
+     .dropdown-content a {
+       color: black;
+       padding: 3%;
+       text-decoration: none;
+       display: flex;
+       justify-content: center;
+       flex-direction: column;
+     }
+     
+     .dropdown-content a:hover 
+     {background-color: white;}
+     
+     .Username:hover .dropdown-content {
+       display: flex;
+       flex-direction: column;
+     }
     }
-  }
