--- a/front-end/css/normalsize/home.css
+++ b/front-end/css/normalsize/home.css
@@ -88,7 +88,7 @@ body
     right: 0;
     top:0;
     margin-top: 48px;
-    background-color: #f9f9f9;
+    background-color: #00adb5;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -100,15 +100,13 @@ body
     display: block;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1;}
+  .dropdown-content a:hover {background-color: white;}
   
   .Username:hover .dropdown-content {
-    display: block;
+    display: flex;
+    flex-direction: column;
   }
   
-  .Username:hover .userbox {
-    background-color: #3e8e41;
-  }
 /* un titlu basic */
 .titlu_proiect h1
 {
@@ -159,40 +157,6 @@ body
     justify-content: center;
     justify-items: center;
 }
-/* searchbar */
-form.example input[type=text] {
-    display:flex;
-    flex-direction: row;
-    padding: 10px;
-    font-size: 17px;
-    border: 1px solid grey;
-    float: left;
-    width: 80%;
-    background: #f1f1f1;
-  }
-  
-  form.example button {
-    float: right;
-    width: 20%;
-    padding: 10px;
-    background: #2196F3;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    border-left: none;
-    cursor: pointer;
-  }
-  
-  form.example button:hover {
-    background: #0b7dda;
-  }
-  
-  form.example::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
  /* casuta postare  */
 .postare{
     
@@ -347,7 +311,7 @@ select,option,button{
 {
     color:white;
 }
-.replies .buton-raspuns
+.replies #buton-raspuns
 {
     background-image: linear-gradient(to right top, #252a34, #413a61, #7c3f7e, #c2357f, #ff2e63);
     width: 100%;
@@ -424,7 +388,6 @@ footer{
     display: flex;
     padding-bottom: 1em;
     color: whitesmoke;
-    border-top: 1px solid #0ca819;
     
    
 }
@@ -433,62 +396,10 @@ footer>section{
     text-align: center;
 }
 
-@media screen and (max-width: 720px) {
-    /* .topnav a:not(:first-child) {display: none;} */
-    .topnav a {display: none;}
-    .topnav a:first-child{
-        margin-top:48px;
-    }
-    
-    .topnav a.icon {
-      float: left;
-      display: block;
-    }
+/*
+.reply_form
+{
+    display:none;
+}
+*/
 
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      left: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .topnav.responsive .Username {
-        float: none;
-        display: block;
-        text-align: left;
-        margin-right:0px;
-      }
-    .center-page
-    {
-        width: 90%;
-    }
-
-    .postare-element_footer  
-    {
-        display:flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin:1%;
-    }
-
-    .postare-element_footer aside
-    {
-        display:flex;
-        flex-direction:  row;
-        align-self: center;
-        justify-content: space-between;
-        margin: 3%;
-        width: 75%;
-    }
-
-    .postare button 
-    {
-        margin:3%;
-        
-    }
-
-  }
