de adaptat login

--- a/postare/view/css/normalsize/home.css
+++ b/postare/view/css/normalsize/home.css
@@ -197,6 +197,11 @@ select,option,button{
     border-radius: 3px;
     color:white;
 }
+/* .postari-list-element p{
+    
+    
+     background-color: #00adb5; 
+} */
 
 
 .add-comment
