--- a/postare/view/css/responsive/navbarR.css
+++ b/postare/view/css/responsive/navbarR.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 720px) {
     /* .topnav a:not(:first-child) {display: none;} */
 
-    /* .topnav a {display: none;}
+    .topnav a {display: none;}
     .topnav a:first-child{
         margin-top:48px;
     }
@@ -27,10 +27,10 @@
         display: block;
         text-align: left;
         margin-right:0px;
-      } */
+      }
 
     /* aliniere text + meniul? */
-    /* .Username label{
+    .Username label{
         float: left;
         display: block;
         color: white;
@@ -75,35 +75,5 @@
       .Username:hover .dropdown-content {
         display: flex;
         flex-direction: column;
-      } */
-      
-    .center-page
-    {
-        width: 90%;
+      }
     }
-
-    .postare-element_footer  
-    {
-        display:flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin:1%;
-    }
-
-    .postare-element_footer aside
-    {
-        display:flex;
-        flex-direction:  row;
-        align-self: center;
-        justify-content: space-between;
-        margin: 3%;
-        width: 75%;
-    }
-
-    .postare button 
-    {
-        margin:3%;
-        
-    }
-
-  }
