--- a/postare/view/css/responsive/profileR.css
+++ b/postare/view/css/responsive/profileR.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 700px) 
   {
-  .topnav a:not(:first-child) 
+  /* .topnav a:not(:first-child) 
   {display: none;}
     .topnav a.icon {
       float: right;
@@ -16,8 +16,14 @@
       float: none;
       display: block;
       text-align: left;
-    }
-
+    } */
+    /* .profile img{
+      width: auto;
+      height: auto;
+      object-fit: contain;
+      margin:20px;
+      margin:auto;
+    } */
   .center-page
   {
     display: flex;
